--- a/u3_app_rails/desafios/desafio1/first_app/Gemfile
+++ b/u3_app_rails/desafios/desafio1/first_app/Gemfile
@@ -6,7 +6,9 @@ ruby '2.7.2'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 6.1.1'
 # Use sqlite3 as the database for Active Record
-gem 'sqlite3', '~> 1.4'
+gem 'sqlite3', '~> 1.4', group: :development
+
+gem 'pg', group: :production
 # Use Puma as the app server
 gem 'puma', '~> 5.0'
 # Use SCSS for stylesheets
@@ -50,6 +52,10 @@ group :test do
   gem 'selenium-webdriver'
   # Easy installation and use of web drivers to run system tests with browsers
   gem 'webdrivers'
+end
+
+group :production do
+gem 'pg'
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
